Style: Fix text align of form label

--- a/css/sgui.css
+++ b/css/sgui.css
@@ -2,7 +2,7 @@
  * SoftGanz Ui CSS
  * Created :: 2020-10-01
  * Modify  :: 2025-12-08
- * Version :: 29
+ * Version :: 30
  */
 
 @charset "UTF-8";
@@ -723,7 +723,7 @@
 	.form-select.-highlight {font-size: 1.2em;}
 
 	.form-item {
-		margin: 0; padding: 8px; position: relative;
+		margin: 0; padding: 8px; position: relative; text-align: left;
 		&.-hidden {display: none;}
 		&.-inlineblock {display: inline-block;}
 		>label:not(.-hidden) {margin: 5px 0; font-weight: bold; display: block;}
